deploy: 5782ced5ca6b116ab461ae4e06ec5ca7e2558aa6

--- a/creating-a-new-theme/index.html
+++ b/creating-a-new-theme/index.html
@@ -12,9 +12,9 @@
 <meta property="og:title" content="Creating a New Theme">
 <meta property="og:description" content="Description of my awesome project.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="/creating-a-new-theme/">
-<link rel=stylesheet href=/dist/site.css>
-<link rel=stylesheet href=/dist/syntax.css>
+<meta property="og:url" content="http://gourabdg47.github.io/Blog/creating-a-new-theme/">
+<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/site.css>
+<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/syntax.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,cyrillic-ext,latin-ext,cyrillic">
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
 </head>
@@ -24,7 +24,7 @@
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=/>A Strange Blog</a>
+<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/XXX rel=me>
 <i class="fa fa-twitter" aria-hidden=true></i>
@@ -38,7 +38,7 @@
 </div>
 <ul class=site-nav>
 <li class=site-nav-item>
-<a href=/hugoisforlovers/>Getting Started with Hugo</a>
+<a href=/Blog/hugoisforlovers/>Getting Started with Hugo</a>
 </li>
 </ul>
 </div>
@@ -868,7 +868,7 @@ $ vi themes/zafta/layouts/_default/single.html
 <p>DRY is a good design goal and Hugo does a great job supporting it. Part of the art of a good template is knowing when to add a new template and when to update an existing one. While you&rsquo;re figuring that out, accept that you&rsquo;ll be doing some refactoring. Hugo makes that easy and fast, so it&rsquo;s okay to delay splitting up a template.</p>
 </div>
 <footer class="post-footer clearfix"><div class=share>
-<a class=icon-twitter href="https://twitter.com/share?text=Creating%20a%20New%20Theme&url=%2fcreating-a-new-theme%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
+<a class=icon-twitter href="https://twitter.com/share?text=Creating%20a%20New%20Theme&url=http%3a%2f%2fgourabdg47.github.io%2fBlog%2fcreating-a-new-theme%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </div>
@@ -881,7 +881,7 @@ $ vi themes/zafta/layouts/_default/single.html
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=/>A Strange Blog</a>
+<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-jump-top js-jump-top" href=# aria-label="Back to Top">
 <i class="fa fa-angle-up" aria-hidden=true></i>
@@ -896,8 +896,8 @@ $ vi themes/zafta/layouts/_default/single.html
 </p>
 </div>
 </footer>
-<script src=/js/jquery-1.11.3.min.js></script>
-<script src=/js/jquery.fitvids.js></script>
-<script src=/js/scripts.js></script>
+<script src=http://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
+<script src=http://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
+<script src=http://gourabdg47.github.io/Blog/js/scripts.js></script>
 </body>
 </html>
