--- a/goisforlovers/index.html
+++ b/goisforlovers/index.html
@@ -12,9 +12,9 @@
 <meta property="og:title" content="(Hu)go Template Primer">
 <meta property="og:description" content="(Hu)go Template Primer description.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://gourabdg47.github.io/Blog/goisforlovers/">
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/site.css>
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/syntax.css>
+<meta property="og:url" content="https://gourabdg47.github.io/Blog/goisforlovers/">
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/site.css>
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/syntax.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,cyrillic-ext,latin-ext,cyrillic">
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
 </head>
@@ -24,7 +24,7 @@
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/XXX rel=me>
 <i class="fa fa-twitter" aria-hidden=true></i>
@@ -305,7 +305,7 @@ so, such as in this example:</p>
 <a href=/Blog/tags/development/>development</a>
 </p>
 <div class=share>
-<a class=icon-twitter href="https://twitter.com/share?text=%28Hu%29go%20Template%20Primer&url=http%3a%2f%2fgourabdg47.github.io%2fBlog%2fgoisforlovers%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
+<a class=icon-twitter href="https://twitter.com/share?text=%28Hu%29go%20Template%20Primer&url=https%3a%2f%2fgourabdg47.github.io%2fBlog%2fgoisforlovers%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </div>
@@ -318,7 +318,7 @@ so, such as in this example:</p>
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-jump-top js-jump-top" href=# aria-label="Back to Top">
 <i class="fa fa-angle-up" aria-hidden=true></i>
@@ -333,8 +333,8 @@ so, such as in this example:</p>
 </p>
 </div>
 </footer>
-<script src=http://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/scripts.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/scripts.js></script>
 </body>
 </html>
