--- a/hugoisforlovers/index.html
+++ b/hugoisforlovers/index.html
@@ -22,9 +22,9 @@ Step 2. Build the Docs Hugo has its own example site which happens to also be th
 Follow the following steps:
  Clone the hugo repository Go into the repo Run hugo in server mode and build the docs Open your browser to http://localhost:1313  Corresponding pseudo commands:">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://gourabdg47.github.io/Blog/hugoisforlovers/">
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/site.css>
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/syntax.css>
+<meta property="og:url" content="https://gourabdg47.github.io/Blog/hugoisforlovers/">
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/site.css>
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/syntax.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,cyrillic-ext,latin-ext,cyrillic">
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
 </head>
@@ -34,7 +34,7 @@ Follow the following steps:
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/XXX rel=me>
 <i class="fa fa-twitter" aria-hidden=true></i>
@@ -133,7 +133,7 @@ Having nearly instant feedback enables you to have your creativity flow without 
 <a href=/Blog/tags/development/>development</a>
 </p>
 <div class=share>
-<a class=icon-twitter href="https://twitter.com/share?text=Getting%20Started%20with%20Hugo&url=http%3a%2f%2fgourabdg47.github.io%2fBlog%2fhugoisforlovers%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
+<a class=icon-twitter href="https://twitter.com/share?text=Getting%20Started%20with%20Hugo&url=https%3a%2f%2fgourabdg47.github.io%2fBlog%2fhugoisforlovers%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </div>
@@ -146,7 +146,7 @@ Having nearly instant feedback enables you to have your creativity flow without 
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-jump-top js-jump-top" href=# aria-label="Back to Top">
 <i class="fa fa-angle-up" aria-hidden=true></i>
@@ -161,8 +161,8 @@ Having nearly instant feedback enables you to have your creativity flow without 
 </p>
 </div>
 </footer>
-<script src=http://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/scripts.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/scripts.js></script>
 </body>
 </html>
