--- a/migrate-from-jekyll/index.html
+++ b/migrate-from-jekyll/index.html
@@ -12,9 +12,9 @@
 <meta property="og:title" content="Migrating from Jekyll">
 <meta property="og:description" content="Migrating from Jekyll description.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://gourabdg47.github.io/Blog/migrate-from-jekyll/">
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/site.css>
-<link rel=stylesheet href=http://gourabdg47.github.io/Blog/dist/syntax.css>
+<meta property="og:url" content="https://gourabdg47.github.io/Blog/migrate-from-jekyll/">
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/site.css>
+<link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/syntax.css>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,cyrillic-ext,latin-ext,cyrillic">
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
 </head>
@@ -24,7 +24,7 @@
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/XXX rel=me>
 <i class="fa fa-twitter" aria-hidden=true></i>
@@ -195,7 +195,7 @@ Liquid::Template.register_tag('image', Jekyll::ImageTag)
 <p><a href=http://heyitsalex.net/>Hey, it&rsquo;s Alex</a> was migrated in less than a <em>father-with-kids day</em> from Jekyll to Hugo. You can see all the changes (and screw-ups) by looking at this <a href=https://github.com/alexandre-normand/alexandre-normand/compare/869d69435bd2665c3fbf5b5c78d4c22759d7613a...b7f6605b1265e83b4b81495423294208cc74d610>diff</a>.</p>
 </div>
 <footer class="post-footer clearfix"><div class=share>
-<a class=icon-twitter href="https://twitter.com/share?text=Migrating%20from%20Jekyll&url=http%3a%2f%2fgourabdg47.github.io%2fBlog%2fmigrate-from-jekyll%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
+<a class=icon-twitter href="https://twitter.com/share?text=Migrating%20from%20Jekyll&url=https%3a%2f%2fgourabdg47.github.io%2fBlog%2fmigrate-from-jekyll%2f" onclick="return window.open(this.href,'twitter-share','width=550,height=235'),!1" aria-label="Share on Twitter">
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </div>
@@ -208,7 +208,7 @@ Liquid::Template.register_tag('image', Jekyll::ImageTag)
 <div class=container>
 <div class=site-title-wrapper>
 <h1 class=site-title>
-<a href=http://gourabdg47.github.io/Blog/>A Strange Blog</a>
+<a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
 <a class="button-square button-jump-top js-jump-top" href=# aria-label="Back to Top">
 <i class="fa fa-angle-up" aria-hidden=true></i>
@@ -223,8 +223,8 @@ Liquid::Template.register_tag('image', Jekyll::ImageTag)
 </p>
 </div>
 </footer>
-<script src=http://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
-<script src=http://gourabdg47.github.io/Blog/js/scripts.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery-1.11.3.min.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/jquery.fitvids.js></script>
+<script src=https://gourabdg47.github.io/Blog/js/scripts.js></script>
 </body>
 </html>
