--- a/404.html
+++ b/404.html
@@ -3,14 +3,14 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <title>404 Page not found &#183; </title>
-<meta name=description content="My description">
+<meta name=description content="Walk with me through space And time ...">
 <meta name=HandheldFriendly content="True">
 <meta name=MobileOptimized content="320">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=robots content="index,follow">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta property="og:title" content="404 Page not found">
-<meta property="og:description" content="My description">
+<meta property="og:description" content="Walk with me through space And time ...">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://gourabdg47.github.io/Blog/404.html">
 <link rel=stylesheet href=https://gourabdg47.github.io/Blog/dist/site.css>
@@ -26,28 +26,25 @@
 <h1 class=site-title>
 <a href=https://gourabdg47.github.io/Blog/>A Strange Blog</a>
 </h1>
-<a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/XXX rel=me>
+<a class="button-square button-social hint--top" data-hint=Twitter aria-label=Twitter href=https://twitter.com/Gourabparadox47 rel=me>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
-<a class="button-square button-social hint--top" data-hint=Github aria-label=Github href=https://github.com/XXX rel=me>
+<a class="button-square button-social hint--top" data-hint=Github aria-label=Github href=https://github.com/gourabdg47 rel=me>
 <i class="fa fa-github-alt" aria-hidden=true></i>
 </a>
-<a class="button-square button-social hint--top" data-hint=Email aria-label="Send an Email" href=mailto:XXX@example.com>
+<a class="button-square button-social hint--top" data-hint=Email aria-label="Send an Email" href=mailto:gourabdasgupta26994@gmail.com>
 <i class="fa fa-envelope" aria-hidden=true></i>
 </a>
 </div>
 <ul class=site-nav>
-<li class=site-nav-item>
-<a href=/Blog/hugoisforlovers/>Getting Started with Hugo</a>
-</li>
 </ul>
 </div>
 </header>
 <div id=container>
 <div class=container>
 <header class=post-header>
-<h1 class=post-title itemprop=name>My headline</h1>
-<p>My description</p>
+<h1 class=post-title itemprop=name>A Confused Mind</h1>
+<p>Walk with me through space And time ...</p>
 </header>
 <p class=error>Oh, this page does not exist. You can head back to <a href=https://gourabdg47.github.io/Blog/>homepage</a>.</p>
 </div>
@@ -64,7 +61,7 @@
 </a>
 </div>
 <p class=footer-copyright>
-<span>&copy; 2015 / Powered by <a href=https://gohugo.io/>Hugo</a></span>
+<span>&copy; 2021 / Powered by <a href=https://gohugo.io/>Hugo</a></span>
 </p>
 <p class=footer-copyright>
 <span><a href=https://github.com/roryg/ghostwriter>Ghostwriter theme</a> By <a href=http://jollygoodthemes.com>JollyGoodThemes</a></span>
